<resources>
    <string name="app_name">Quick Display</string>
    <string name="slot_barcode">BARCODE</string>
    <string name="slot_qrcode">QR CODE</string>
    <string name="slot_photo">PHOTO</string>
    <string name="select_image">SELECT FOR CURRENT SLOT</string>
    <string name="remove_image">REMOVE CURRENT SLOT IMAGE</string>
    <string name="rotate_image">ROTATE CURRENT SLOT IMAGE</string>
    <string name="picture_preview">Picture preview</string>
    <string name="dark_background">Switch to dark background</string>
    <string name="light_background">Switch to light background</string>
</resources>
